--- a/components/events.jade
+++ b/components/events.jade
@@ -4,7 +4,8 @@ template(name='events')
         .row
             .four.wide.column
                 h1.ui.massive.inline.header 
-                    +i name='calendar'
+                    //- +i name='calendar'
+                    i.calendar.icon
                     |events
                 .ui.icon.large.button.new_event
                     i.green.plus.icon
