--- a/components/groups.jade
+++ b/components/groups.jade
@@ -4,7 +4,8 @@ template(name='groups')
         .row
             .four.wide.column
                 h1.ui.massive.inline.header 
-                    +i name='groups'
+                    //- +i name='groups'
+                    i.users.icon
                     |groups
                 .ui.icon.large.button.new_group
                     i.green.plus.icon
