--- a/client/client.jade
+++ b/client/client.jade
@@ -27,9 +27,9 @@ template(name='layout')
     .context
         +nav
         .ui.attached.basic.segment.pushable.global_container
-            +topbar
+            //- +topbar
             +sidebar
-            +rightbar
+            //- +rightbar
             .pusher
                 #main
                     //- .ui.basic.fluid.segment
