--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -16,7 +16,7 @@ template(name='delta')
                             //- +edit_circular.button
             
                         if is_dev
-                            //- +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
+                            +user_list_toggle key='bookmark_ids' icon='bookmark' label='bookmark' color='red'
                             .ui.icon.large.basic.button.edit_model
                                 i.large.cog.icon
                                 //- +i name='settings'
@@ -52,10 +52,10 @@ template(name='delta')
                     //-     |sort by
                     //- .ui.button
                     //- .ui.stackable.four.column.grid
-                    .ui.three.stackable.cards
-                        each current_delta.result_ids
-                            //- .column
-                            +delta_result
+                    //- .ui.three.stackable.cards
+                    each current_delta.result_ids
+                        //- .column
+                        +delta_result
                 
 
 
@@ -108,31 +108,57 @@ template(name='delta_result')
         if template_exists
             +Template.dynamic template=model_template
         else
-            .ui.result.cloud.card(class=loading_class)
-                .content
-                    each fields
-                        +Template.dynamic template=view_template 
-                    .extra
-                        if is_model
-                            +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
-                            a.ui.basic.button.route_model(href="/m/#{slug}")
-                                i.sitemap.icon
-                                |View Model
-                            if is_admin
-                                a.ui.basic.button.route_model(href="/model/edit/#{_id}")
-                                    i.edit.icon
-                                    |Edit Model
-                        else
-                            if can_edit
-                                +remove_button
-                                a.ui.large.icon.basic.button(href="/m/#{current_model.slug}/#{_id}/edit" title='edit')
-                                    i.pencil.large.icon
-                                    //- |edit
-                            a.ui.icon.large.basic.button(href="/m/#{current_model.slug}/#{_id}/view" title='view')
-                                i.right.chevron.large.icon
-                        if _author_id
-                            +author_info
-                        +creation_info
-                            
-                
+            //- .ui.result.cloud.fluid.card(class=loading_class)
+            .ui.result.stackable.grid.segment(class=loading_class)
+                if image_id
+                    .four.wide.column
+                        img.ui.image(src="{{c.url image_id width=400 height=400 gravity='face' crop='fill'}}")
+                    .twelve.wide.column
+                        .content
+                            each fields
+                                +Template.dynamic template=view_template 
+                            .extra
+                                if is_model
+                                    +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
+                                    a.ui.basic.button.route_model(href="/m/#{slug}")
+                                        i.sitemap.icon
+                                        |View Model
+                                    if is_admin
+                                        a.ui.basic.button.route_model(href="/model/edit/#{_id}")
+                                            i.edit.icon
+                                            |Edit Model
+                                else
+                                    if can_edit
+                                        +remove_button
+                                        a.ui.large.icon.basic.button(href="/m/#{current_model.slug}/#{_id}/edit" title='edit')
+                                            i.pencil.large.icon
+                                            //- |edit
+                                    a.ui.icon.large.basic.button(href="/m/#{current_model.slug}/#{_id}/view" title='view')
+                                        i.right.chevron.large.icon
+                                if _author_id
+                                    +author_info
+                                +creation_info
+                                    
                         
+                        
+
+
+
+template(name='user_card_template')
+    .ui.result.stackable.grid.segment(class=loading_class)
+        if image_id
+            .four.wide.column
+                img.ui.rounded.image(src="{{c.url image_id width=400 height=400 gravity='face' crop='fill'}}")
+        else
+            .four.wide.column
+                i.massive.user.grey.icon
+        .twelve.wide.column
+            .content
+                .ui.header #{first_name} #{last_name}
+                .extra
+                    a.ui.icon.large.basic.button(href="/user/#{username}/view" title='view')
+                        i.right.chevron.large.icon
+                    each tags
+                        .ui.basic.label #{this}
+            
+            
