--- a/client/client.jade
+++ b/client/client.jade
@@ -1,5 +1,5 @@
 head
-    title gro
+    title dao
     meta(name='viewport', content='user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width')
     meta(name='apple-mobile-web-app-capable', content='yes')
     meta(name='apple-mobile-web-app-status-bar-style', content='black')
@@ -22,24 +22,10 @@ head
 
 
 template(name='layout')
-    //- img.ui.fluid.image.banner_image(src="{{c.url 'stars_big' width=1000 height=cal500 crop='crop'}}")
     +nav
-    .context
-        +nav
-        .ui.attached.basic.segment.pushable.global_container
-            //- +topbar
-            +sidebar
-            //- +rightbar
-            .pusher
-                #main
-                    //- .ui.basic.fluid.segment
-                    +yield
-    //- .ui.stackable.global_container.grid(class=invert_class)
-    //-     .centered.row
+    +yield
     if is_eric
         +footer 
-
-        //- +footer
 
 
 template(name='mlayout')
