--- a/client/fields.jade
+++ b/client/fields.jade
@@ -62,7 +62,7 @@ template(name='icon_edit')
                 |#{this}    
         if field_value
             //- i.large.icon(class=field_value)
-            img(src="https://img.icons8.com/color/48/000000/#{field_value}.png")
+            img(src="https://img.icons8.com/pastel-glyph/48/000000/#{field_value}.png")
         input.icon_val(type='text' value=field_value placeholder='icon8 class' autocomplete="off")
 
 
@@ -73,13 +73,13 @@ template(name='color_icon_view')
 template(name='icon_view')
     if field_value
         div
-        i.icon(class=field_value)
-        //- img(src="https://img.icons8.com/color/48/000000/#{field_value}.png")
+        //- i.icon(class=field_value)
+        img(src="https://img.icons8.com/pastel-glyph/48/000000/#{field_value}.png")
 
 
 template(name='i')
     //- img(src="https://img.icons8.com/color/48/000000/#{name}.png" class=classes title=title)
-    img(src="https://img.icons8.com/pastel-glyph/48/000000/#{name}.png" class=classes title=title)
+    img(src="https://img.icons8.com/pastel-glyph/64/000000/#{name}.png" class=classes title=title)
     //- img(src="https://img.icons8.com/office/48/000000/#{name}.png" class=classes title=title)
     //- img(src="https://img.icons8.com/ultraviolet/48/000000/#{name}.png" class=classes title=title)
 
@@ -131,7 +131,7 @@ template(name='image_view')
         //-     |#{key}
         //- else
         //-     |#{this}
-        img.ui.centered.rounded.image(src="{{c.url field_value gravity='face' crop='fit'}}" class=classes)
+        img.ui.centered.rounded.image.invert(src="{{c.url field_value gravity='face' crop='fit'}}" class=classes)
         //- a(href="{{c.url field_value gravity='face' crop='fit'}}")
         //-     |download
     //- +call_visual
@@ -281,17 +281,17 @@ template(name='html_edit')
         +froalaReactive getFEContext
     //- if is_dev
     +call_watson mode='html'
-    div
+    //- div
     //- +tone mode='html'
-    if watson
-        +watson_view
+    //- if watson
+    //-     +watson_view
         
         
 template(name='html_view')
     if field_value
         div
-        if icon
-            +i name=icon classes='ui avatar image'
+        //- if icon
+        //-     +i name=icon classes='ui avatar inline image'
             //- i.icon(class=icon)
         //- if title
         //-     |#{title}
@@ -299,10 +299,10 @@ template(name='html_view')
         //-     |#{key}
         //- else
         //-     |#{this}
-    |!{field_value}
+        |!{field_value}
     //- +call_watson mode='html'
-    //- if watson
-    //-     +watson_view
+    if parent.watson
+        +watson_view
 
 
 template(name='document_edit')
@@ -829,14 +829,14 @@ template(name='youtube_edit')
             |Youtube Id
         input.youtube_id(type='text' value=field_value placeholder=placeholder autocomplete="off")
     if field_value
-        iframe(width='560' height='315' src="https://www.youtube.com/embed/#{field_value}" frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
+        iframe.invert(width='560' height='315' src="https://www.youtube.com/embed/#{field_value}" frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
 
 template(name='youtube_view')
     if field_value
         if icon
             +i name=icon
             //- i.icon(class=icon)
-        .ui.embed(data-source="youtube" data-id=field_value)
+        .ui.embed.invert(data-source="youtube" data-id=field_value)
 
         //- // iframe(width='560' height='315' src="https://www.youtube.com/embed/#{field_value}" frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
         //- iframe(src="https://www.youtube.com/embed/#{field_value}" frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
@@ -913,14 +913,26 @@ template(name='single_doc_edit')
             +i name=icon
             //- i.icon(class=icon)
         |#{label} #{title}
-    each choices
-        .ui.small.circular.compact.button.select_choice(class=choice_class)
-            if icon
-                +i name=icon classes='ui avatar image'
-                //- i.icon(class=icon)
-                //- +i name=icon classes='ui avatar image'
-            |#{calculated_label}
-            |#{slug}
+    .ui.input
+        input#single_doc_input(type='text' placeholder='lookup doc...')
+        each selections
+            .ui.large.label
+                |#{first_name} #{last_name}
+    if doc_results
+        .ui.attached.smoothed.segment
+            .ui.middle.aligned.selection.animated.list
+                each doc_results
+                    .select_doc.item
+                        h4.ui.header
+                            |#{first_name} #{last_name} #{username}
+    //- each choices
+    //-     .ui.small.circular.compact.button.select_choice(class=choice_class)
+    //-         if icon
+    //-             +i name=icon classes='ui avatar image'
+    //-             //- i.icon(class=icon)
+    //-             //- +i name=icon classes='ui avatar image'
+    //-         |#{calculated_label}
+    //-         |#{slug}
 
 
 template(name='multi_doc_edit')
