--- a/client/gallery.jade
+++ b/client/gallery.jade
@@ -11,22 +11,24 @@ template(name='gallery')
                             +image_item
                             
                             
-template(name='image_item')
+template(name='image_card_template')
     //- .ui.card
-    .ui.link.card.image_item
-        img.ui.image(src="{{c.url image_id height=200 width=300 crop='lpad'}}")
-        .content
-            .header #{title}
-            .meta #{when}
-            
-        .content
-            .right.floated 
-            +small_author_info
-            //- img.ui.avatar.image(src="{{c.url author.image_id height=200 width=200 crop='fit'}}")
-            //- |#{_author_username}
-        .extra.content
-            i.eye.icon
-            |#{views}
+    .ui.stackable.grid.segment.image_item
+        .eight.wide.column
+            img.ui.rounded.image(src="{{c.url image_id height=200 width=300 crop='lpad'}}")
+        .eight.wide.column
+            .content
+                .header #{title}
+                .meta #{when}
+                
+            .content
+                .right.floated 
+                +small_author_info
+                //- img.ui.avatar.image(src="{{c.url author.image_id height=200 width=200 crop='fit'}}")
+                //- |#{_author_username}
+            .extra.content
+                i.eye.icon
+                |#{views}
             
 
 
