--- a/client/profile.jade
+++ b/client/profile.jade
@@ -1,89 +1,81 @@
 template(name='user_layout')
     +nav
-    .context
-        +nav
-        .ui.attached.basic.segment.pushable.global_container
-            //- +topbar
-            +sidebar
-            //- +rightbar
-            .pusher
-                #main
-                    with user_from_username_param
-                        .ui.padded.stackable.grid.global_container
-                            .ui.hidden.divider
-                            .row
-                                .four.wide.column
-                                    if image_id
-                                        img.ui.centered.circular.shadowed.image(src="{{c.url image_id height=300 width=300 gravity='face' crop='fill'}}")
-                                        //- a.item(href="/user/#{user_from_username_param.username}/")
-                                    .ui.center.aligned.basic.segment
-                                        a(href="/user/#{user.username}")
-                                            h1.ui.large.center.aligned.header
-                                                | #{user.first_name}
-                                                | #{user.last_name}
-                                    .ui.center.aligned.small.grey.header
-                                        | #{user.tagline}
-                                    .ui.center.aligned.small.grey.header
-                                        | @#{user.username}        
-                                    if is_dev
-                                        a.ui.icon.button.item(href="/user/#{user_from_username_param.username}/edit" title='settings')
-                                            +i name='settings'
-                                    else if is_current_user
-                                        a.ui.icon.button.item(href="/user/#{user_from_username_param.username}/edit" title='settings')
-                                            +i name='settings'
-                                    .ui.icon.button.direct_message
-                                        +i name='new-message'
-                                        //- |direct message
-                                    if is_current_user
-                                        .ui.icon.button.logout(title='log out')
-                                            +i name='exit-sign'
-                                        a.ui.small.button.logout_other_clients(href="#")
-                                            |logout other clients
-                                    if is_admin
-                                        .ui.segment
-                                            .ui.grey.header 
-                                                //- +i name='user shield'
-                                                i.shield.icon
-                                                |roles
-                                            each roles
-                                                .ui.basic.label #{this}
-                                .twelve.wide.column.shadowed-box
-                                    a.ui.icon.button(href="/user/#{username}" class="{{isActiveRoute 'user_about'}}" title='info')
-                                        +i name='info'
-                                    a.ui.icon.button(href="/user/#{username}/dashboard" class="{{isActiveRoute 'user_dashboard'}}" title='info')
-                                        +i name='dashboard'
-                                    a.ui.icon.button(href="/user/#{username}/social" class="{{isActiveRoute 'user_social'}}" title='social')
-                                        +i name='collaboration'
-                                    a.ui.icon.button(href="/user/#{username}/documents" class="{{isActiveRoute 'user_documents'}}" title='documents')
-                                        +i name='documents'
-                                    a.ui.icon.button(href="/user/#{username}/products" class="{{isActiveRoute 'user_products'}}" title='shop')
-                                        +i name='shop'
-                                    a.ui.icon.button(href="/user/#{username}/gallery" class="{{isActiveRoute 'user_gallery'}}" title='gallery')
-                                        +i name='gallery'
-                                    a.ui.icon.button(href="/user/#{username}/bookmarks" class="{{isActiveRoute 'user_bookmarks'}}" title='bookmarks')
-                                        +i name='star'
-                                    a.ui.icon.button(href="/user/#{username}/contact" class="{{isActiveRoute 'user_contact'}}" title='contact')
-                                        +i name='phone'
-                                    a.ui.icon.button(href="/user/#{username}/events" class="{{isActiveRoute 'user_events'}}" title='events')
-                                        +i name='calendar'
-                                    a.ui.icon.button(href="/user/#{username}/comparison" class="{{isActiveRoute 'user_comparison'}}" title='comparison')
-                                        +i name='meeting'
-                                    a.ui.icon.button(href="/user/#{username}/tags" class="{{isActiveRoute 'user_tags'}}" title='tags')
-                                        +i name='tags'
-                                    a.ui.icon.button(href="/user/#{username}/requests" class="{{isActiveRoute 'user_requests'}}" title='requests')
-                                        +i name='request-service'
-                                    a.ui.icon.button(href="/user/#{username}/votes" class="{{isActiveRoute 'user_votes'}}" title='votes')
-                                        +i name='elections'
-                                    a.ui.icon.button(href="/user/#{username}/karma" class="{{isActiveRoute 'user_karma'}}" title='karma')
-                                         +i name='heart-with-pulse'
-                                    a.ui.icon.button(href="/user/#{username}/payment" class="{{isActiveRoute 'user_payment'}}" title='payment options')
-                                         +i name='online-payment-with-a-credit-card'
-                                    a.ui.icon.button(href="/user/#{username}/transactions" class="{{isActiveRoute 'user_transactions'}}" title='money')
-                                         +i name='money'
-                                    a.ui.icon.button(href="/user/#{username}/notifications" class="{{isActiveRoute 'user_notifications'}}" title='money')
-                                         +i name='appointment-reminders'
-                                    +yield
-    +footer 
+    with user_from_username_param
+        .ui.padded.stackable.grid.global_container
+            .ui.hidden.divider
+            .row
+                .four.wide.column
+                    if image_id
+                        img.ui.centered.circular.shadowed.image(src="{{c.url image_id height=300 width=300 gravity='face' crop='fill'}}")
+                        //- a.item(href="/user/#{user_from_username_param.username}/")
+                    .ui.center.aligned.basic.segment
+                        a(href="/user/#{user.username}")
+                            h1.ui.large.center.aligned.header
+                                | #{user.first_name}
+                                | #{user.last_name}
+                    .ui.center.aligned.small.grey.header
+                        | #{user.tagline}
+                    .ui.center.aligned.small.grey.header
+                        | @#{user.username}        
+                    if is_dev
+                        a.ui.icon.button.item(href="/user/#{user_from_username_param.username}/edit" title='settings')
+                            +i name='settings'
+                    else if is_current_user
+                        a.ui.icon.button.item(href="/user/#{user_from_username_param.username}/edit" title='settings')
+                            +i name='settings'
+                    .ui.icon.button.direct_message
+                        +i name='new-message'
+                        //- |direct message
+                    if is_current_user
+                        .ui.icon.button.logout(title='log out')
+                            +i name='exit-sign'
+                        a.ui.small.button.logout_other_clients(href="#")
+                            |logout other clients
+                    if is_admin
+                        .ui.segment
+                            .ui.grey.header 
+                                //- +i name='user shield'
+                                i.shield.icon
+                                |roles
+                            each roles
+                                .ui.basic.label #{this}
+                .twelve.wide.column.shadowed-box
+                    a.ui.icon.button(href="/user/#{username}" class="{{isActiveRoute 'user_about'}}" title='info')
+                        +i name='info'
+                    a.ui.icon.button(href="/user/#{username}/dashboard" class="{{isActiveRoute 'user_dashboard'}}" title='info')
+                        +i name='dashboard'
+                    a.ui.icon.button(href="/user/#{username}/social" class="{{isActiveRoute 'user_social'}}" title='social')
+                        +i name='collaboration'
+                    a.ui.icon.button(href="/user/#{username}/documents" class="{{isActiveRoute 'user_documents'}}" title='documents')
+                        +i name='documents'
+                    a.ui.icon.button(href="/user/#{username}/products" class="{{isActiveRoute 'user_products'}}" title='shop')
+                        +i name='shop'
+                    a.ui.icon.button(href="/user/#{username}/gallery" class="{{isActiveRoute 'user_gallery'}}" title='gallery')
+                        +i name='gallery'
+                    a.ui.icon.button(href="/user/#{username}/bookmarks" class="{{isActiveRoute 'user_bookmarks'}}" title='bookmarks')
+                        +i name='star'
+                    a.ui.icon.button(href="/user/#{username}/contact" class="{{isActiveRoute 'user_contact'}}" title='contact')
+                        +i name='phone'
+                    a.ui.icon.button(href="/user/#{username}/events" class="{{isActiveRoute 'user_events'}}" title='events')
+                        +i name='calendar'
+                    a.ui.icon.button(href="/user/#{username}/comparison" class="{{isActiveRoute 'user_comparison'}}" title='comparison')
+                        +i name='meeting'
+                    a.ui.icon.button(href="/user/#{username}/tags" class="{{isActiveRoute 'user_tags'}}" title='tags')
+                        +i name='tags'
+                    a.ui.icon.button(href="/user/#{username}/requests" class="{{isActiveRoute 'user_requests'}}" title='requests')
+                        +i name='request-service'
+                    a.ui.icon.button(href="/user/#{username}/votes" class="{{isActiveRoute 'user_votes'}}" title='votes')
+                        +i name='elections'
+                    a.ui.icon.button(href="/user/#{username}/karma" class="{{isActiveRoute 'user_karma'}}" title='karma')
+                         +i name='heart-with-pulse'
+                    a.ui.icon.button(href="/user/#{username}/payment" class="{{isActiveRoute 'user_payment'}}" title='payment options')
+                         +i name='online-payment-with-a-credit-card'
+                    a.ui.icon.button(href="/user/#{username}/transactions" class="{{isActiveRoute 'user_transactions'}}" title='money')
+                         +i name='money'
+                    a.ui.icon.button(href="/user/#{username}/notifications" class="{{isActiveRoute 'user_notifications'}}" title='money')
+                         +i name='appointment-reminders'
+                    +yield
+    //- +footer 
 
 
 template(name='user_products')
