--- a/client/shop.jade
+++ b/client/shop.jade
@@ -216,7 +216,7 @@ template(name='add_to_tab')
 
 
 template(name='shop_card_template')
-    .ui.card
+    .ui.fluid.card
         a.pointer(href="/shop/#{_id}/view")
             img.ui.centered.rounded.image(src="{{c.url image_id width=300 height=200 crop='lpad'}}")
         .content
