--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -10,13 +10,14 @@ template(name='delta')
                     unless is_loading
                         if currentUser
                             .ui.icon.large.basic.button.add_model_doc(title="Add #{title}")
-                                i.plus.green.large.icon
+                                i.plus.large.icon
                             //- +i name='plus'
                         //- if can_edit
                             //- +edit_circular.button
+                        if currentUser
+                            +user_list_toggle key='bookmark_ids' icon='bookmark' label='bookmark' color='red'
             
                         if is_dev
-                            +user_list_toggle key='bookmark_ids' icon='bookmark' label='bookmark' color='red'
                             .ui.icon.large.basic.button.edit_model
                                 i.large.cog.icon
                                 //- +i name='settings'
@@ -113,32 +114,32 @@ template(name='delta_result')
                 if image_id
                     .four.wide.column
                         img.ui.image(src="{{c.url image_id width=400 height=400 gravity='face' crop='fill'}}")
-                    .twelve.wide.column
-                        .content
-                            each fields
-                                +Template.dynamic template=view_template 
-                            .extra
-                                if is_model
-                                    +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
-                                    a.ui.basic.button.route_model(href="/m/#{slug}")
-                                        i.sitemap.icon
-                                        |View Model
-                                    if is_admin
-                                        a.ui.basic.button.route_model(href="/model/edit/#{_id}")
-                                            i.edit.icon
-                                            |Edit Model
-                                else
-                                    if can_edit
-                                        +remove_button
-                                        a.ui.large.icon.basic.button(href="/m/#{current_model.slug}/#{_id}/edit" title='edit')
-                                            i.pencil.large.icon
-                                            //- |edit
-                                    a.ui.icon.large.basic.button(href="/m/#{current_model.slug}/#{_id}/view" title='view')
-                                        i.right.chevron.large.icon
-                                if _author_id
-                                    +author_info
-                                +creation_info
-                                    
+                .twelve.wide.column
+                    .content
+                        each fields
+                            +Template.dynamic template=view_template 
+                        .extra
+                            if is_model
+                                +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
+                                a.ui.basic.button.route_model(href="/m/#{slug}")
+                                    i.sitemap.icon
+                                    |View Model
+                                if is_admin
+                                    a.ui.basic.button.route_model(href="/model/edit/#{_id}")
+                                        i.edit.icon
+                                        |Edit Model
+                            else
+                                if can_edit
+                                    +remove_button
+                                    a.ui.large.icon.basic.button(href="/m/#{current_model.slug}/#{_id}/edit" title='edit')
+                                        i.pencil.large.icon
+                                        //- |edit
+                                a.ui.icon.large.basic.button(href="/m/#{current_model.slug}/#{_id}/view" title='view')
+                                    i.right.chevron.large.icon
+                            if _author_id
+                                +author_info
+                            +creation_info
+                                
                         
                         
 
@@ -156,9 +157,22 @@ template(name='user_card_template')
             .content
                 .ui.header #{first_name} #{last_name}
                 .extra
-                    a.ui.icon.large.basic.button(href="/user/#{username}/view" title='view')
+                    a.ui.icon.large.basic.button(href="/user/#{username}" title='view')
                         i.right.chevron.large.icon
                     each tags
                         .ui.basic.label #{this}
             
             
+template(name='model_card_template')
+    .ui.result.stackable.grid.segment(class=loading_class)
+        a.four.wide.column.route_model(href="/m/#{slug}")
+            +i name=icon
+        .twelve.wide.column
+            .content
+                .ui.header #{title}
+                .extra
+                    each tags
+                        .ui.basic.label #{this}
+                    +user_list_toggle key='bookmark_ids' icon='bookmark' label='Bookmark' color='red'
+                    a.ui.big.icon.button.route_model(href="/m/#{slug}")
+                        i.right.chevron.big.icon
