--- a/components/delta/model.jade
+++ b/components/delta/model.jade
@@ -132,7 +132,8 @@ template(name='field_edit')
         //- +text_edit key='ref_model' label='Reference Model' direct=true
         +boolean_edit key='faceted' label='faceted' direct=true
         if is_ref  
-            +single_doc_edit key='ref_model' ref_model='model' label='reference model' direct=true
+            +text_edit key='ref_model' ref_model='model' label='reference model' direct=true
+            +text_edit key='lookup_field' label='lookup field' direct=true
         else if is_user_ref  
             +single_doc_edit key='role_filter' ref_model='role' label='role filter' direct=true
         div             
