--- a/components/delta/model_doc.jade
+++ b/components/delta/model_doc.jade
@@ -17,10 +17,10 @@ template(name='model_doc_edit')
                     each edit_fields
                         +Template.dynamic template=edit_template 
                         // .ui.header #{key} [#{field}] #{label}
-            //- if watson 
-            //-     .row
-            //-         .sixteen.wide.column
-            //-             +watson_view
+            if watson 
+                .row
+                    .sixteen.wide.column
+                        +watson_view
 
 template(name='model_doc_view')
     with current_doc
@@ -75,9 +75,9 @@ template(name='model_doc_view')
                         unless header
                             .item
                                 +Template.dynamic template=view_template 
-                    //- div
-                    //- if watson
-                    //-     +watson_view
+                    div
+                    if watson
+                        +watson_view
 
 
 template(name='karma_transaction')
